{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 79,
  "lineage": "4b06b386-0457-3aa1-0fe8-ef3c74072fea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-levva",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:internet-gateway/igw-02d058a0567d34e47",
            "id": "igw-02d058a0567d34e47",
            "owner_id": "714456381100",
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "dependencies": [
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:route-table/rtb-00f97b609809c3c03",
            "id": "rtb-00f97b609809c3c03",
            "owner_id": "714456381100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d058a0567d34e47",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-levva",
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levva_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:security-group/sg-0a69adbdf3081e582",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a69adbdf3081e582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "levva_nsg20231001161600989300000001",
            "name_prefix": "levva_nsg",
            "owner_id": "714456381100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:subnet/subnet-0783be21811229b19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0783be21811229b19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714456381100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_01"
            },
            "tags_all": {
              "Name": "Private_01"
            },
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "dependencies": [
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:subnet/subnet-05e39a7c23940aac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e39a7c23940aac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714456381100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_02"
            },
            "tags_all": {
              "Name": "Private_02"
            },
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "dependencies": [
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:subnet/subnet-0fcdb394c0b6f080c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcdb394c0b6f080c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714456381100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_01"
            },
            "tags_all": {
              "Name": "Public_01"
            },
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "dependencies": [
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:subnet/subnet-04983a4327713223a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04983a4327713223a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714456381100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_02"
            },
            "tags_all": {
              "Name": "Public_02"
            },
            "vpc_id": "vpc-09dc4c77316ebecbc"
          },
          "dependencies": [
            "aws_vpc.levva_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "levva_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714456381100:vpc/vpc-09dc4c77316ebecbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09096142b50ed9916",
            "default_route_table_id": "rtb-03cb7cd0328804873",
            "default_security_group_id": "sg-06a4b0ff832202a6e",
            "dhcp_options_id": "dopt-04c8a52cfd220d2d8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09dc4c77316ebecbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cb7cd0328804873",
            "owner_id": "714456381100",
            "tags": {
              "Name": "levva_vpc"
            },
            "tags_all": {
              "Name": "levva_vpc"
            }
          }
        }
      ]
    }
  ]
}